adding new files

--- a/csit/6sem/research/2075.html
+++ b/csit/6sem/research/2075.html
@@ -70,22 +70,22 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
-                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2074</p>
-                <p> Introduction to Cryptography (CSIT.321)</p>
+                <p>End-Term Examination-2075</p>
+                <p> Research Methodology for computer science (CSIT.323)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Sixth <br>
+                        <b>Semester:</b> sixth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
@@ -100,44 +100,45 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define cryptography.explain cipher with suitable example.</li>
-                        <li>Explain Elliptic curve cryptography in detail.</li>
-                        <li>Explain chinese remainder theorem with suitable example.</li>
-                        <li>How can you check integrity of a message? explain the properties of cryptographic hash
-                            function.</li>
-                        <li>What do you mean by web security ? differentiate between firewall and intrusion detection
-                            system.</li>
-                        <li>explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
-                        <li>Explain CMAC process. What is the number of padding bits if the length of the original
-                            message is 2590 bits in case of SHA-512?</li>
-                        <li>Write short notes on:(any two)</li>
-                        i. HIll cipher
-                        ii. shannon's thepry
-                        iii. symmetric vs.Asymmetric cipher
+                        <li>Define research problem? Discuss about the guidelines for selecting the meaningful research
+                            problem.</li>
+                        <li>What is research design? Mention the characteristics of good research design?</li>
+                        <li>Point out the advantages and disadvantages of laboratory experiment?</li>
+                        <li>What is reliabilit? If the correlation coefficient of a test score is 0.80, obtain the
+                            reliability coefficient if i) the test is made just once (single test) ii) the test is
+                            double iii) the length of test is four times iv) the test is done five times v) the test is
+                            done seven times and vi) test increase nine times.</li>
+                        <li>What are differences between primary and secondary data?</li>
+                        <li>The reliability coefficient of a test is found 0.75 with mean score as 65 and s.d. of 12 Mr.
+                            sudama obtain a score 55 on the test. What is the true score? Also computer 95% confidence
+                            interval for the true value.</li>
+                        <li>What are the major characteristics of scientific research?</li>
+                        <li>Briefly discuss about Latin square design with suitable examples?</li>
 
 
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (Long questions) 2x16=32 </p>
+                            <p class="text-center">Attempt any two questions. (2x16=32)</p>
                         </b>
-                        <li>Explain AES algorithm with its features and block diagram.</li>
-                        <li>What is man-in-the-middle attack? Explain Diffie-Hellman key exchange algorithm with
-                            suitable example.</li>
-                        <li>What do you mean by Fermats and euler theorem? Explain modification detection code (MDC) i
-                            details.</li>
+
+                        <li>Briefly explain the different steps/process of research.</li>
+                        <li>What is sampling? Describe different types of probability sampling.</li>
+                        <li>What is research report? Discuss the major components of research report.</li>
+
+
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="#">Introduction to Cryptography</a></li>
+                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
                     <li><a href="../java/2074.html">Java Progamming I</a></li>
-                    <li><a href="../research/2074.html">Research Methodology for CS</a></li>
+                    <li><a href="#">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="">Web Tech II</a></li>
-                    <li><a href="">Minor Project I</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
