--- a/csit/6sem/research/2076.html
+++ b/csit/6sem/research/2076.html
@@ -70,22 +70,22 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
-                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2076</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2074</p>
-                <p> Introduction to Cryptography (CSIT.321)</p>
+                <p>End-Term Examination-2076</p>
+                <p> Research methodology of computer science (CSIT.323)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Sixth <br>
+                        <b>Semester:</b> sixth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
@@ -100,44 +100,54 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define cryptography.explain cipher with suitable example.</li>
-                        <li>Explain Elliptic curve cryptography in detail.</li>
-                        <li>Explain chinese remainder theorem with suitable example.</li>
-                        <li>How can you check integrity of a message? explain the properties of cryptographic hash
-                            function.</li>
-                        <li>What do you mean by web security ? differentiate between firewall and intrusion detection
-                            system.</li>
-                        <li>explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
-                        <li>Explain CMAC process. What is the number of padding bits if the length of the original
-                            message is 2590 bits in case of SHA-512?</li>
-                        <li>Write short notes on:(any two)</li>
-                        i. HIll cipher
-                        ii. shannon's thepry
-                        iii. symmetric vs.Asymmetric cipher
-
+                        <li>What is research? Why the research is necessary for computer science and information
+                            technology?</li>
+                        <li>Define the literature review. Point out the guidelines for conducting a literature survey.
+                        </li>
+                        <li>What is the research design? Discuss the needs of research design in research.</li>
+                        <li>Define scientific research. Briefly discuss the characteristics of scientific research.</li>
+                        <li>What do you understand as experimental research? Mention the advantages and disadvantages of
+                            the field experiment.</li>
+                        <li>What is the half-split method? If the correction coefficient of a test score is 0.85. Obtain
+                            the reliability coefficient if i) the test is made just once (single test)  <br> ii) the test is
+                            double <br> iii) the length of the test is four times <br> iv) the test is done seven times and  <br> v)
+                            test increase nine times.</li>
+                        <li>What is the schedule? Discuss the content of the schedule.</li>
+                        <li>Calculate the correlation coefficient from the following data and interpret thw result.
+                            <br>
+                            <table class="table table-bordered">
+                                <tr>
+                                    <td>X</td> <td>2</td> <td>7</td> <td>4</td> <td>2</td> <td>0</td> <td>4</td> <td>1</td> <td>2</td>
+                                </tr>
+                                <tr>
+                                    <td>Y</td> <td>11</td> <td>18</td> <td>9</td> <td>4</td> <td>7</td> <td>6</td> <td>3</td> <td>8</td>
+                                </tr>
+                            </table>
+                        </li>
 
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (Long questions) 2x16=32 </p>
+                            <p class="text-center">Attempt any two questions. (2x16=32)</p>
                         </b>
-                        <li>Explain AES algorithm with its features and block diagram.</li>
-                        <li>What is man-in-the-middle attack? Explain Diffie-Hellman key exchange algorithm with
-                            suitable example.</li>
-                        <li>What do you mean by Fermats and euler theorem? Explain modification detection code (MDC) i
-                            details.</li>
+                        <li>Explain the major steps of the research process with suitable examples.</li>
+                        <li>What is the thesis? Discuss the main elements of the thesis?</li>
+                        <li>Define sampling and describe the different types of non-probability smpling.</li>
+
+
+
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="#">Introduction to Cryptography</a></li>
+                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
                     <li><a href="../java/2074.html">Java Progamming I</a></li>
-                    <li><a href="../research/2074.html">Research Methodology for CS</a></li>
+                    <li><a href="#">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="">Web Tech II</a></li>
-                    <li><a href="">Minor Project I</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
