--- a/csit/6sem/crypto/2075.html
+++ b/csit/6sem/crypto/2075.html
@@ -130,9 +130,9 @@
                 <h4>Sixth Semester</h4>
                 <ol>
                     <li><a href="#">Introduction to Cryptography</a></li>
-                    <li><a href="">Java Progamming I</a></li>
-                    <li><a href="">Research Methodology for CS</a></li>
-                    <li><a href="">Software Engineering</a></li>
+                    <li><a href="../java/2074.html">Java Progamming I</a></li>
+                    <li><a href="../research/2074.html">Research Methodology for CS</a></li>
+                    <li><a href="../se/2074.html">Software Engineering</a></li>
                     <li><a href="">Web Tech II</a></li>
                     <li><a href="">Minor Project I</a></li>
                 </ol>
