--- a/csit/6sem/java/2075.html
+++ b/csit/6sem/java/2075.html
@@ -70,22 +70,22 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
-                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
-                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn ">2076</button></a>
                     <a href="2079.html"><button type="button" class="btn ">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2074</p>
-                <p> Introduction to Cryptography (CSIT.321)</p>
+                <p>End-Term Examination-2075</p>
+                <p> Java programming (CSIT.322)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Sixth <br>
+                        <b>Semester:</b> sixth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
@@ -100,44 +100,49 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define cryptography.explain cipher with suitable example.</li>
-                        <li>Explain Elliptic curve cryptography in detail.</li>
-                        <li>Explain chinese remainder theorem with suitable example.</li>
-                        <li>How can you check integrity of a message? explain the properties of cryptographic hash
-                            function.</li>
-                        <li>What do you mean by web security ? differentiate between firewall and intrusion detection
-                            system.</li>
-                        <li>explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
-                        <li>Explain CMAC process. What is the number of padding bits if the length of the original
-                            message is 2590 bits in case of SHA-512?</li>
-                        <li>Write short notes on:(any two)</li>
-                        i. HIll cipher
-                        ii. shannon's thepry
-                        iii. symmetric vs.Asymmetric cipher
+                        <li>List out main features of java programming? Explain java virtual machine with example.</li>
+                        <li>Differentiate between interface and abstract class. Explain interface with example.</li>
+                        <li>What is paxkage? Write down steps to create package in java with example.</li>
+                        <li>What is collection in java? Write a java program to illustrate use of link list class with
+                            example.</li>
+                        <li>Discuss the term try, catch and finally with regarding exception in java.</li>
+                        <li>Differentiate between break and continue statements with example.</li>
+                        <li>Write a program to write "welcome" message to file and to read from same file in java.</li>
+                        <li>Write short notes (any two) <br>
+                            i. Access specifier <br>
+                            ii. Polymorphism <br>
+                            iii. Final keyword
+                        </li>
+
+
 
 
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (Long questions) 2x16=32 </p>
+                            <p class="text-center">Attempt any two questions. (2x16=32)</p>
                         </b>
-                        <li>Explain AES algorithm with its features and block diagram.</li>
-                        <li>What is man-in-the-middle attack? Explain Diffie-Hellman key exchange algorithm with
-                            suitable example.</li>
-                        <li>What do you mean by Fermats and euler theorem? Explain modification detection code (MDC) i
-                            details.</li>
+                        <li>Define multithreading. List out its advantages. Explain the life cycle of thread with state
+                            diagram and programming example.</li>
+                        <li>What are the advantage of using inheritance?How do you implement multiple inheritances in
+                            java?</li>
+                        <li>Draw flowchart of if else if statements and solve the following problems. Write a program to
+                            find net bill amount for electricity consumed: If consumed unit is less or equal to 80, cost
+                            will be 100, If consumed unit is greater than 80 and less than 200, rate for all units above
+                            80 will be NRs7.5 If the consumed unit is greater than 300 than, rate is NRs.12.</li>
+
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="#">Introduction to Cryptography</a></li>
-                    <li><a href="../java/2074.html">Java Progamming I</a></li>
+                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
+                    <li><a href="#">Java Progamming I</a></li>
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="">Web Tech II</a></li>
-                    <li><a href="">Minor Project I</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
