--- a/csit/6sem/java/2079.html
+++ b/csit/6sem/java/2079.html
@@ -70,74 +70,83 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
-                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2076</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2074</p>
-                <p> Introduction to Cryptography (CSIT.321)</p>
+                <p>End-Term Examination-2079</p>
+                <p> Java programming (CSIT.322)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Sixth <br>
+                        <b>Semester:</b> sixth <br>
                     </div>
                     <div class="col-md-3 text-start">
-                        <b>Full Marks:</b> 80 <br>
-                        <b>Time:</b> 2hrs 40 minutes
+                        <b>Full Marks:</b> 100 <br>
+                        <b>Time:</b> 3hrs
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
-                <h5>Group B</h5>
+                <h5>Group A</h5>
                 <b>
-                    <p>Attempt any six questions.(6x8=48)</p>
+                    <p>Attempt all questions.(8x3=24)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define cryptography.explain cipher with suitable example.</li>
-                        <li>Explain Elliptic curve cryptography in detail.</li>
-                        <li>Explain chinese remainder theorem with suitable example.</li>
-                        <li>How can you check integrity of a message? explain the properties of cryptographic hash
-                            function.</li>
-                        <li>What do you mean by web security ? differentiate between firewall and intrusion detection
-                            system.</li>
-                        <li>explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
-                        <li>Explain CMAC process. What is the number of padding bits if the length of the original
-                            message is 2590 bits in case of SHA-512?</li>
-                        <li>Write short notes on:(any two)</li>
-                        i. HIll cipher
-                        ii. shannon's thepry
-                        iii. symmetric vs.Asymmetric cipher
+                        <li>Write down any two difference between application and applet.</li>
+                        <li>What is command line argument in java?</li>
+                        <li>What is garbage collection in java?</li>
+                        <li>Define synchronization in java.</li>
+                        <li>What is collection? Why is it used?</li>
+                        <li>What are the advantages of inheritance?</li>
+                        <li>How array is created in java?</li>
+                        <li>What is the use of super keyword in java?</li>
 
-
+                        <h5 class="text-center">Group B</h5>
+                        <b>
+                            <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
+                        </b>
+                        <li>What is package? How do you create your own package in java?</li>
+                        <li>Write a program to input age and name of a student and display the same using scanner and
+                            Buffered Reader class.</li>
+                        <li>Why is it important to handle exception? Write a program to illustrate exception handling.
+                        </li>
+                        <li>Explain the function of final keyword with regard to variable, method and class.</li>
+                        <li>Differentiate between method overloading and method overriding.</li>
+                        <li>What is array list? Write a program to demonstrate working of Array list in java.</li>
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (Long questions) 2x16=32 </p>
+                            <p class="text-center">Attempt any three questions. (Long questions) (3x12=36)</p>
                         </b>
-                        <li>Explain AES algorithm with its features and block diagram.</li>
-                        <li>What is man-in-the-middle attack? Explain Diffie-Hellman key exchange algorithm with
-                            suitable example.</li>
-                        <li>What do you mean by Fermats and euler theorem? Explain modification detection code (MDC) i
-                            details.</li>
+                        <li>What is interface? How do you implement multiple inheritance in java?</li>
+                        <li>What are the features of java programming? Describe java and internet in brief.</li>
+                        <li>Explain different state in a thread's life cycle. Write a program to create thread.</li>
+                        <li>Explain the following terms with reference to java: <br>
+                            i. Throw and throws <br>
+                            ii. Java virtual machine <br>
+                            iii. Innerclass <br>
+                        </li>
+
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="#">Introduction to Cryptography</a></li>
-                    <li><a href="../java/2074.html">Java Progamming I</a></li>
+                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
+                    <li><a href="#">Java Progamming I</a></li>
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="">Web Tech II</a></li>
-                    <li><a href="">Minor Project I</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
