--- a/csit/6sem/research/2074.html
+++ b/csit/6sem/research/2074.html
@@ -73,19 +73,19 @@
                     <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2074</p>
-                <p> Introduction to Cryptography (CSIT.321)</p>
+                <p> Research Methodology for computer science (CSIT.323)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Sixth <br>
+                        <b>Semester:</b> sixth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
@@ -100,44 +100,47 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define cryptography.explain cipher with suitable example.</li>
-                        <li>Explain Elliptic curve cryptography in detail.</li>
-                        <li>Explain chinese remainder theorem with suitable example.</li>
-                        <li>How can you check integrity of a message? explain the properties of cryptographic hash
-                            function.</li>
-                        <li>What do you mean by web security ? differentiate between firewall and intrusion detection
-                            system.</li>
-                        <li>explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
-                        <li>Explain CMAC process. What is the number of padding bits if the length of the original
-                            message is 2590 bits in case of SHA-512?</li>
-                        <li>Write short notes on:(any two)</li>
-                        i. HIll cipher
-                        ii. shannon's thepry
-                        iii. symmetric vs.Asymmetric cipher
-
+                        <li>Define research design. Describe the major elements of research design with suitable
+                            diagram?</li>
+                        <li>Distinguish between qualitative research and quantitative research.</li>
+                        <li>What is reliabilit? If the correlation coefficient of a test score is 0.80, obtain the
+                            reliability coefficient if i) the test is made just once (single test) ii) the test is
+                            double iii) the length of test is four times iv) the test is done five times v) the test is
+                            done seven times and vi) test increase nine times.</li>
+                        <li>The reliability coefficient of a test is found 0.6 wuth mean score as 55 and standard
+                            deviation of 8.Mr john obtains a score 46 on the test. What is the true score? also computer
+                            95% confidence interval for the true value.</li>
+                        <li>What are differences between primary and secondary data?</li>
+                        <li>Write down the essential components needed for publication of research paper on research
+                            journal.</li>
+                        <li>Define ethical issue. What do you meant informed consent and why it is important for
+                            research work?</li>
+                        <li>What are the differnces between schedule and questionnaire?</li>
 
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (Long questions) 2x16=32 </p>
+                            <p class="text-center">Attempt any two questions. (2x16=32)</p>
                         </b>
-                        <li>Explain AES algorithm with its features and block diagram.</li>
-                        <li>What is man-in-the-middle attack? Explain Diffie-Hellman key exchange algorithm with
-                            suitable example.</li>
-                        <li>What do you mean by Fermats and euler theorem? Explain modification detection code (MDC) i
-                            details.</li>
+                        <li>Research is a systematic way of searching new knowledge " mention about the different steps
+                            of research process which are used by research during their research work.</li>
+                        <li>What is theis? Describe the different parts of thesis which are necessary for the research
+                            report.</li>
+                        <li>What is sampling? Describe the different types of probability sampling.</li>
+
+
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="#">Introduction to Cryptography</a></li>
+                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
                     <li><a href="../java/2074.html">Java Progamming I</a></li>
-                    <li><a href="../research/2074.html">Research Methodology for CS</a></li>
+                    <li><a href="#">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="">Web Tech II</a></li>
-                    <li><a href="">Minor Project I</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
