--- a/csit/6sem/se/2076.html
+++ b/csit/6sem/se/2076.html
@@ -70,22 +70,21 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
-                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
-                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="2075.html"><button type="button" class="btn ">2075</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style ">2076</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2074</p>
-                <p> Introduction to Cryptography (CSIT.321)</p>
+                <p>End-Term Examination-2076</p>
+                <p> Software Engineering (CSIT.324)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Sixth <br>
+                        <b>Semester:</b> sixth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
@@ -100,44 +99,39 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define cryptography.explain cipher with suitable example.</li>
-                        <li>Explain Elliptic curve cryptography in detail.</li>
-                        <li>Explain chinese remainder theorem with suitable example.</li>
-                        <li>How can you check integrity of a message? explain the properties of cryptographic hash
-                            function.</li>
-                        <li>What do you mean by web security ? differentiate between firewall and intrusion detection
-                            system.</li>
-                        <li>explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
-                        <li>Explain CMAC process. What is the number of padding bits if the length of the original
-                            message is 2590 bits in case of SHA-512?</li>
-                        <li>Write short notes on:(any two)</li>
-                        i. HIll cipher
-                        ii. shannon's thepry
-                        iii. symmetric vs.Asymmetric cipher
-
-
+                        <li>What is software engineering? Explain application od software.</li>
+                        <li>Briefly describe software engineering process.</li>
+                        <li>Explain RED and agile software development process model.</li>
+                        <li>Explain black box and white box testing with their merits and demerits.</li>
+                        <li>What is model driven engineering described briefly.</li>
+                        <li>Be defining architecture view, explain various types of architecture views.</li>
+                        <li>Explain change management.</li>
+                        <li>What is software maintenance? Discuss types of software management.</li>
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (Long questions) 2x16=32 </p>
+                            <p class="text-center">Attempt any two questions. (2x16=32)</p>
                         </b>
-                        <li>Explain AES algorithm with its features and block diagram.</li>
-                        <li>What is man-in-the-middle attack? Explain Diffie-Hellman key exchange algorithm with
-                            suitable example.</li>
-                        <li>What do you mean by Fermats and euler theorem? Explain modification detection code (MDC) i
-                            details.</li>
+                        <li>Define requirement understanding and types of software requirement. Explain requirement
+                            engineering process.</li>
+                        <li>What is system architecture? Describe context model, interaction model and structural model.
+                        </li>
+                        <li>Define architecture patterns. Explain layered repository and pipe and filter architecture.
+                        </li>
+
+
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="#">Introduction to Cryptography</a></li>
+                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
                     <li><a href="../java/2074.html">Java Progamming I</a></li>
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
-                    <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="">Web Tech II</a></li>
-                    <li><a href="">Minor Project I</a></li>
+                    <li><a href="#">Software Engineering</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
