--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
         <h4>Sixth Semester</h4>
         <ol>
           <li><a href="csit/6sem/crypto/2079.html">Introduction to Cryptography</a></li>
-          <li><a href="">Java Progamming I</a></li>
-          <li><a href="">Research Methodology for CS</a></li>
-          <li><a href="">Software Engineering</a></li>
-          <li><a href="" href="">Web Tech II</a></li>
-          <li><a href="" href="">Minor Project I</a></li>
+          <li><a href="csit/6sem/java/2074.html">Java Progamming I</a></li>
+          <li><a href="csit/6sem/research/2074.html">Research Methodology for CS</a></li>
+          <li><a href="csit/6sem/se/2074.html">Software Engineering</a></li>
+          <li><a href="#" href="">Web Tech II</a></li>
+          <li><a href="#" href="">Minor Project I</a></li>
         </ol>
       </div>
     </div>
