--- a/csit.html
+++ b/csit.html
@@ -134,12 +134,12 @@
             <div class="col-lg-3 shadow mt-3">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="csit/6sem/crypto/2074.htm">Introduction to Cryptography</a></li>
-                    <li><a href="">Java Progamming I</a></li>
-                    <li><a href="">Research Methodology for CS</a></li>
-                    <li><a href="">Software Engineering</a></li>
-                    <li><a href="" href="">Web Tech II</a></li>
-                    <li><a href="" href="">Minor Project I</a></li>
+                    <li><a href="csit/6sem/crypto/2079.html">Introduction to Cryptography</a></li>
+                    <li><a href="csit/6sem/java/2074.html">Java Progamming I</a></li>
+                    <li><a href="csit/6sem/research/2074.html">Research Methodology for CS</a></li>
+                    <li><a href="csit/6sem/se/2074.html">Software Engineering</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
@@ -175,50 +175,50 @@
     <div class="row justify-content-center rounded" id="footer-section">
         <div class="col-md-6 text-center">Get connected with us on social networks:</div>
         <div class="col-md-5 text-center">
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""> <i class="bi bi-instagram"></i></i></a>
-          <a href=""><i class="bi bi-github"></i></i></a>
-          <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
-          <a href=""> <i class="bi bi-instagram"></i></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href=""> <i class="bi bi-instagram"></i></i></a>
+            <a href=""><i class="bi bi-github"></i></i></a>
+            <a href=""> <i class="bi bi-twitter"></i></i></i></a>
+            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href=""> <i class="bi bi-instagram"></i></i></a>
         </div>
-      </div>
-  
-      <div class="row justify-content-center" id="footer-section-2">
+    </div>
+
+    <div class="row justify-content-center" id="footer-section-2">
         <div class="col-md-3 mb-3">
-          <h4>COMPANY NAME</h4>
-          <hr class="mb-4">
-          Here you can use rows and columns to organize your footer content.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            <h4>COMPANY NAME</h4>
+            <hr class="mb-4">
+            Here you can use rows and columns to organize your footer content.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
         </div>
         <div class="col-md-2 mb-3" id="footer-useful-link">
-          <h4>USEFUL LINKS</h4>
-          <hr class="mb-4">
-          <a href="#our-team-title">CSIT</a> <br>
-          <a href="">General Bsc</a> <br>
-          <a href="">Engineering</a> <br>
-          <a href="">BBA</a> <br>
-          <a href="">BBS</a> <br>
+            <h4>USEFUL LINKS</h4>
+            <hr class="mb-4">
+            <a href="#our-team-title">CSIT</a> <br>
+            <a href="">General Bsc</a> <br>
+            <a href="">Engineering</a> <br>
+            <a href="">BBA</a> <br>
+            <a href="">BBS</a> <br>
         </div>
         <div class="col-md-3 mb-3" id="footer-contact">
-          <h4>CONTACT</h4>
-          <hr class="mb-4">
-          <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
-          <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-          <div><i class="bi bi-telephone-forward p-2"></i>+9979867315959</div>
+            <h4>CONTACT</h4>
+            <hr class="mb-4">
+            <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
+            <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
+            <div><i class="bi bi-telephone-forward p-2"></i>+9979867315959</div>
         </div>
-      </div>
-  
-      <div class="row text-center" id="footer-copyright-section">
+    </div>
+
+    <div class="row text-center" id="footer-copyright-section">
         <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
-      </div>
-  
+    </div>
+
     </div> <!--Ending of Container-fluid-->
-  
+
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
-  </body>
-  
-  </html>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
