--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <!-- Science and Technology Departments -->
     <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>First Semester</h4>
         <ol>
           <li><a href="">Compulsory English </a></li>
@@ -138,7 +138,7 @@
           <li><a href="">Programming Fundamentals And C Programming</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Second Semester</h4>
         <ol>
           <li><a href="">Linear Algebra</a></li>
@@ -148,7 +148,7 @@
           <li><a href="">Data Structure And Algorithms</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Third Semester</h4>
         <ol>
           <li><a href="csit/3sem/coa/2078.html">Computer Architecture</a></li>
@@ -162,7 +162,7 @@
     </div>
 
     <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Fourth Semester</h4>
         <ol>
           <li><a href="csit/4sem/sad/2079.html">System Analysis and Design</a></li>
@@ -173,7 +173,7 @@
           <li><a href="">Theory Of Computation</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Fifth Semester</h4>
         <ol>
           <li><a href="csit/5sem/cg/2079.html">Computer Graphics</a></li>
@@ -184,7 +184,7 @@
           <li><a href="csit/5sem/web/2079.html">Web Technology I</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Sixth Semester</h4>
         <ol>
           <li><a href="csit/6sem/crypto/2079.html">Introduction to Cryptography</a></li>
@@ -198,7 +198,7 @@
     </div>
 
     <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Seventh Semester</h4>
         <ol>
           <li><a href="">E-commerce</a></li>
@@ -209,7 +209,7 @@
           <li><a href="">Data Mining and Warehousing (Elective II)</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Eight Semester</h4>
         <ol>
           <li><a href="">Parallel Computing</a></li>
