--- a/csit/4sem/toc/2079.html
+++ b/csit/4sem/toc/2079.html
@@ -160,11 +160,11 @@
                 <h4>Fourth Semester</h4>
                 <ol>
                     <li><a href="../sad/2079.html">System Analysis and Design</a></li>
-                    <li><a href="#">Numerical Methods</a></li>
+                    <li><a href="../nm/2079.html">Numerical Methods</a></li>
                     <li><a href="../database/2073.html">Database Management System</a></li>
                     <li><a href="../satII/2079.html">Applied Statistics</a></li>
                     <li><a href="../dcn/2079.html">Data Communication and Networks</a></li>
-                    <li><a href="">Theory Of Computation</a></li>
+                    <li><a href="#">Theory Of Computation</a></li>
                 </ol>
             </div>
         </div>
