--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@
       <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>First Semester</h4>
         <ol>
-          <li><a href="">Compulsory English </a></li>
-          <li><a href="">Information Technology Fundamentals</a></li>
-          <li><a href="">Calculus And Analytical Geometry</a></li>
-          <li><a href="">Electronic Physics</a></li>
-          <li><a href="">Programming Fundamentals And C Programming</a></li>
+          <li><a href="#">Compulsory English </a></li>
+          <li><a href="#">Information Technology Fundamentals</a></li>
+          <li><a href="#">Calculus And Analytical Geometry</a></li>
+          <li><a href="#">Electronic Physics</a></li>
+          <li><a href="#">Programming Fundamentals And C Programming</a></li>
         </ol>
       </div>
       <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Second Semester</h4>
         <ol>
-          <li><a href="">Linear Algebra</a></li>
-          <li><a href="">Mechanics And Electrodynamics</a></li>
-          <li><a href="">Digital Logic Design</a></li>
-          <li><a href="">Microprocessor System</a></li>
-          <li><a href="">Data Structure And Algorithms</a></li>
+          <li><a href="#">Linear Algebra</a></li>
+          <li><a href="#">Mechanics And Electrodynamics</a></li>
+          <li><a href="csit/2sem/DL/2071.html">Digital Logic Design</a></li>
+          <li><a href="#">Microprocessor System</a></li>
+          <li><a href="csit/2sem/DSA/2072.html">Data Structure And Algorithms</a></li>
         </ol>
       </div>
       <div class="col-lg-3 shadow-lg  rounded mt-3">
@@ -166,11 +166,11 @@
         <h4>Fourth Semester</h4>
         <ol>
           <li><a href="csit/4sem/sad/2079.html">System Analysis and Design</a></li>
-          <li><a href="">Numerical Methods</a></li>
+          <li><a href="csit/4sem/nm/2079.html">Numerical Methods</a></li>
           <li><a href="csit/4sem/database/2073.html">Database Management System</a></li>
           <li><a href="csit/4sem/satII/2079.html">Applied Statistics</a></li>
           <li><a href="csit/4sem/dcn/2079.html">Data Communication and Networks</a></li>
-          <li><a href="">Theory Of Computation</a></li>
+          <li><a href="csit/4sem/toc/2079.html">Theory Of Computation</a></li>
         </ol>
       </div>
       <div class="col-lg-3 shadow-lg  rounded mt-3">
@@ -201,22 +201,22 @@
       <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Seventh Semester</h4>
         <ol>
-          <li><a href="">E-commerce</a></li>
-          <li><a href="">Advanced Java Programming</a></li>
-          <li><a href="">Object Oriented Analysis and Design</a></li>
-          <li><a href="">Minor Project II</a></li>
-          <li><a href="">Database Administration (Elective I)</a></li>
-          <li><a href="">Data Mining and Warehousing (Elective II)</a></li>
+          <li><a href="#">E-commerce</a></li>
+          <li><a href="#">Advanced Java Programming</a></li>
+          <li><a href="#">Object Oriented Analysis and Design</a></li>
+          <li><a href="#">Minor Project II</a></li>
+          <li><a href="#">Database Administration (Elective I)</a></li>
+          <li><a href="#">Data Mining and Warehousing (Elective II)</a></li>
         </ol>
       </div>
       <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Eight Semester</h4>
         <ol>
-          <li><a href="">Parallel Computing</a></li>
-          <li><a href="">Internship</a></li>
-          <li><a href="">Advanced Database Design (Elective III)</a></li>
-          <li><a href="">Distributed Database Management System (Elective IV)</a></li>
-          <li><a href="">E-Business and E-Governance (Elective V)</a></li>
+          <li><a href="#">Parallel Computing</a></li>
+          <li><a href="#">Internship</a></li>
+          <li><a href="#">Advanced Database Design (Elective III)</a></li>
+          <li><a href="#">Distributed Database Management System (Elective IV)</a></li>
+          <li><a href="#">E-Business and E-Governance (Elective V)</a></li>
         </ol>
       </div>
     </div>
@@ -362,7 +362,7 @@
       <div class="col-md-2 mb-3" id="footer-useful-link">
         <h4>USEFUL LINKS</h4>
         <hr class="mb-4">
-        <a href="#our-team-title">CSIT</a> <br>
+        <a href="csit.html">CSIT</a> <br>
         <a href="">General Bsc</a> <br>
         <a href="">Engineering</a> <br>
         <a href="">BBA</a> <br>
