--- a/csit.html
+++ b/csit.html
@@ -88,10 +88,10 @@
             <div class="col-lg-3 shadow-lg  rounded mt-3">
                 <h4>Second Semester</h4>
                 <ol>
-                    <li><a href="">Linear Algebra</a></li>
-                    <li><a href="">Mechanics And Electrodynamics</a></li>
+                    <li><a href="#">Linear Algebra</a></li>
+                    <li><a href="#">Mechanics And Electrodynamics</a></li>
                     <li><a href="csit/2sem/DL/2071.html">Digital Logic Design</a></li>
-                    <li><a href="">Microprocessor System</a></li>
+                    <li><a href="#">Microprocessor System</a></li>
                     <li><a href="csit/2sem/DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
@@ -205,7 +205,7 @@
             <hr class="mb-4">
             <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
             <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9979867315959</div>
+            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
         </div>
     </div>
 
