--- a/index.html
+++ b/index.html
@@ -363,17 +363,17 @@
         <h4>USEFUL LINKS</h4>
         <hr class="mb-4">
         <a href="csit.html">CSIT</a> <br>
-        <a href="">General Bsc</a> <br>
-        <a href="">Engineering</a> <br>
-        <a href="">BBA</a> <br>
-        <a href="">BBS</a> <br>
+        <a href="#">General Bsc</a> <br>
+        <a href="#">Engineering</a> <br>
+        <a href="bba.html">BBA</a> <br>
+        <a href="#">BBS</a> <br>
       </div>
       <div class="col-md-3 mb-3" id="footer-contact">
         <h4>CONTACT</h4>
         <hr class="mb-4">
         <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
         <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-        <div><i class="bi bi-telephone-forward p-2"></i>+9979867315959</div>
+        <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
       </div>
     </div>
 
