--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
       <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Seventh Semester</h4>
         <ol>
-          <li><a href="#">E-commerce</a></li>
-          <li><a href="#">Advanced Java Programming</a></li>
-          <li><a href="#">Object Oriented Analysis and Design</a></li>
+          <li><a href="csit/7sem/ecom/2075.html">E-commerce</a></li>
+          <li><a href="csit/7sem/adJava/2075.html">Advanced Java Programming</a></li>
+          <li><a href="csit/7sem/ooad/2075.html">Object Oriented Analysis and Design</a></li>
           <li><a href="#">Minor Project II</a></li>
-          <li><a href="#">Database Administration (Elective I)</a></li>
-          <li><a href="#">Data Mining and Warehousing (Elective II)</a></li>
+          <li><a href="csit/7sem/dba/2074.html">Database Administration (Elective I)</a></li>
+          <li><a href="csit/7sem/dmw/2075.html">Data Mining and Warehousing (Elective II)</a></li>
         </ol>
       </div>
       <div class="col-lg-3 shadow-lg  rounded mt-3">
